--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,9 @@ Property binding
 <exo-button></exo-button>
 <app-student-form (addedStudent)="onAddedStudent()"></app-student-form>
 <app-student-list></app-student-list> 
--->
-
-<!-- <router-outlet /> -->
 <app-student-wrapper></app-student-wrapper>
+<app-rform></app-rform>
+<demo-routing-menu></demo-routing-menu>
+-->
+<exos-textstats></exos-textstats>
+
