--- a/src/app/student-wrapper/student-wrapper.component.html
+++ b/src/app/student-wrapper/student-wrapper.component.html
@@ -1,2 +1,2 @@
-<app-student-form (addedStudent)="getStudents()"></app-student-form>
+<app-student-form (newStudent)="getStudents()"></app-student-form>
 <app-student-list [students]="students"></app-student-list> 
